--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <div id="tooltip"></div>
     <div id="header" class="container-fluid headerdark">
         <div id="sysmsg" class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-center myhide">Системное сообщение: <span id="sysmsg_val"></span></div>
+        <div id="emer_code" class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-center myhide">ВНИМАНИЕ!!! <span id="emer_code_msg"></span></div>
 
         <div class="logo col-lg-2 col-md-2 hidden-sm hidden-xs">HELL GAME 2016</div>
         <div class="logo col-xs-12 visible-xs visible-sm text-center">HELL GAME 2016</div>
@@ -61,7 +62,7 @@
                             <i class="fa fa-exclamation-circle orange_code code_off" aria-hidden="true" data-tooltip="Оранжевый код"></i>
                         </div>
                         <div class="uc_played"><i class="fa fa-play-circle" aria-hidden="true"></i></div>
-                        <div class="uc_status_code"><i class="fa fa-home" aria-hidden="true"></i></div>
+                        <div class="uc_status_code"><i class="fa fa-refresh fa-spin" aria-hidden="true"></i></div>
                     </div>
                     <div class="emocode">
                         <div class="glyphicon glyphicon-triangle-top"></div>
@@ -83,7 +84,7 @@
                             <i class="fa fa-exclamation-circle orange_code code_off" aria-hidden="true" data-tooltip="Оранжевый код"></i>
                         </div>
                         <div class="uc_played"><i class="fa fa-play-circle" aria-hidden="true"></i></div>
-                        <div class="uc_status_code"><i class="fa fa-home" aria-hidden="true"></i></div>
+                        <div class="uc_status_code"><i class="fa fa-refresh fa-spin" aria-hidden="true"></i></div>
                     </div>
                     <div class="emocode">
                         <div class="glyphicon glyphicon-triangle-top"></div>
@@ -123,22 +124,24 @@
                     <div class="uc_card">Карточка</div>
                     <div class="uc_col_left container-fluid">
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
-                            <button class="btn btn-danger btn_clsuc">Закрыть</button>
+                            <button class="btn btn-danger btn_clsuc"><i class="fa fa-close"></i>Закрыть</button>
                             <div class="uc_photo"></div>
-                            <div class="label label-success label-online">online</div>
+                            <h3>
+                                <div class="label label-success label-online">online</div>
+                            </h3>
                         </div>
                         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 text-center">
                             <h2 class="uc_login">{USER.Login}</h2>
                             <p class="uc_name">{USER.Name}</p>
                             <p class="uc_title">{USER.Title}</p>
                             <h3>
-                                <span class="label label-success label-played label-disabled" data-played="true">Играет</span>
+                                <div style="display:block;" class="label label-success btn-block label-played label-disabled" data-played="true">Играет</div>
                             </h3>
                             <h3>
-                                <span class="label label-danger label-rc label-disabled" data-red-code="false">Красный код</span>
+                                <div style="display:block;" class="label label-danger btn-block label-rc label-disabled" data-red-code="false">Красный код</div>
                             </h3>
                             <h3>
-                                <span class="label label-warning label-oc label-disabled" data-orange-code="false">Оранжевый код</span>
+                                <div style="display:block;" class="label label-warning btn-block label-oc label-disabled" data-orange-code="false">Оранжевый код</div>
                             </h3>
                         </div>
                     </div>
@@ -182,7 +185,7 @@
                     <div class="uc_card">Карточка</div>
                     <div class="uc_col_left container-fluid">
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
-                            <button class="btn btn-danger btn_clsuc">Закрыть</button>
+                            <button class="btn btn-danger btn_clsuc"><i class="fa fa-close"></i>Закрыть</button>
                             <div class="uc_photo"></div>
                             <div class="label label-success label-online">online</div>
                         </div>
@@ -191,13 +194,14 @@
                             <p class="uc_name">---</p>
                             <p class="uc_title">---</p>
                             <h4>
-                                <span class="btn btn-danger btn-played disabled" data-played="false">Играть</span>
+                                <span class="btn btn-success btn-block btn-played disabled" data-played="true">Играть</span>
+                                <span class="btn btn-danger btn-block btn-played disabled" data-played="false">Не играть</span>
                             </h4>
                             <div class="form-group">
-                                <input type="text" class="uc_msg form-control" maxlength="20" placeholder="Сообщение всем">
+                                <input type="text" class="uc_code_msg form-control" maxlength="20" placeholder="Сообщение всем">
                             </div>
-                            <button class="btn btn-danger disabled btn-red-code">Красный код</button>
-                            <button class="btn btn-warning disabled btn-orange-code">Оранжевый код</button>
+                            <button class="btn btn-danger btn-red-code" data-active="false">Красный код</button>
+                            <button class="btn btn-warning btn-orange-code" data-active="false">Оранжевый код</button>
                         </div>
                     </div>
                 </div>
@@ -224,6 +228,19 @@
                 </div>
                 <div class="uc_col uc_col_weather col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
                     <div class="uc_weather">Сообщаю</div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                        <div class="uc_weather_icon"><i class="fa fa-bolt fa-5x"></i></div>
+                        <h2 class="weather_title">{WEATHER.title}</h2>
+                        <p class="weather-label-dng"></p>
+                        <p class="weather_time">Получено:<span class="weather_time_val">{date}{time}</span></p>
+                        <p class="label label-warning label-dataold">данные возможно устарели</p>
+                        <p class="emo_title">Настроение:</p>
+                        <h2>
+                            <span class="emo_val">{lastEMO}</span>
+                            <span class="devider">&nbsp;&nbsp;&nbsp;</span>
+                            <span class="emo_val_tend">{tend}</span>
+                        </h2>
+                    </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
                         <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-sun-o"></span><span class="hidden-md hidden-sm status_msg_val">Солнечно</span></button>
                         <button class="btn btn-danger btn-block btn_status_submit" data-danger="true"><span class="fa fa-lg fa-fw fa-bolt"></span><span class="hidden-md hidden-sm status_msg_val">Гроза</span></button>
@@ -232,14 +249,29 @@
                         <button class="btn btn-warning btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-calendar"></span><span class="hidden-md hidden-sm status_msg_val">Дела</span></button>
                         <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-industry"></span><span class="hidden-md hidden-sm status_msg_val">Работа</span></button>
 
+                        <button class="btn btn-danger btn-block btn_status_submit" data-danger="true"><span class="fa fa-lg fa-fw fa-angle-double-right"></span><span class="hidden-md hidden-sm status_msg_val">Ветер</span></button>
+                        <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-eye"></span><span class="hidden-md hidden-sm status_msg_val">Мониторинг</span></button>
+                        <button class="btn btn-danger btn-block btn_status_submit" data-danger="true"><span class="fa fa-lg fa-fw fa-ambulance"></span><span class="hidden-md hidden-sm status_msg_val">Болею</span></button>
+                        <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-info"></span><span class="hidden-md hidden-sm status_msg_val">Праздник</span></button>
+                        <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-battery-4"></span><span class="hidden-md hidden-sm status_msg_val"> Выспался</span></button>
+                        <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-book"></span><span class="hidden-md hidden-sm status_msg_val">Читаю</span></button>
+                        <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-cart-plus"></span><span class="hidden-md hidden-sm status_msg_val">В Магазине</span></button>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
                         <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-cloud"></span><span class="hidden-md hidden-sm status_msg_val">Облачно</span></button>
-                        <button class="btn btn-danger btn-block btn_status_submit" data-danger="true"><span class="fa fa-lg fa-fw fa-soundcloud"></span><span class="hidden-md hidden-sm status_msg_val">Туман</span></button>
+                        <button class="btn btn-danger btn-block btn_status_submit" data-danger="true"><span class="fa fa-lg fa-fw fa-soundcloud"></span><span class="hidden-md hidden-sm status_msg_val"> Туман</span></button>
                         <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-home"></span><span class="hidden-md hidden-sm status_msg_val">Дома</span></button>
                         <button class="btn btn-warning btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-cab"></span><span class="hidden-md hidden-sm status_msg_val">Такси</span></button>
                         <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-commenting"></span><span class="hidden-md hidden-sm status_msg_val">Свободен</span></button>
                         <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-coffee"></span><span class="hidden-md hidden-sm status_msg_val">Перерыв</span></button>
+
+                        <button class="btn btn-warning btn-block btn_status_submit" data-danger="true"><span class="fa fa-lg fa-fw fa-umbrella"></span><span class="hidden-md hidden-sm status_msg_val">Дождь</span></button>
+                        <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-spinner"></span><span class="hidden-md hidden-sm status_msg_val">Отдых</span></button>
+                        <button class="btn btn-danger btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-battery-0"></span><span class="hidden-md hidden-sm status_msg_val"> Засыпаю</span></button>
+                        <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-futbol-o"></span><span class="hidden-md hidden-sm status_msg_val">Спорт</span></button>
+                        <button class="btn btn-warning btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-battery-1"></span><span class="hidden-md hidden-sm status_msg_val"> Устал</span></button>
+                        <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-code"></span><span class="hidden-md hidden-sm status_msg_val">Коддинг</span></button>
+                        <button class="btn btn-danger btn-block btn_status_submit" data-danger="true"><span class="fa fa-lg fa-fw fa-close"></span><span class="hidden-md hidden-sm status_msg_val">Занят</span></button>
 
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
@@ -249,6 +281,15 @@
                         <button class="btn btn-warning btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-map"></span><span class="hidden-md hidden-sm status_msg_val">Поездка</span></button>
                         <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-cutlery"></span><span class="hidden-md hidden-sm status_msg_val">Ем</span></button>
                         <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-hotel"></span><span class="hidden-md hidden-sm status_msg_val">Сплю</span></button>
+
+                        <button class="btn btn-warning btn-block btn_status_submit" data-danger="true"><span class="fa fa-lg fa-fw fa-meh-o"></span><span class="hidden-md hidden-sm status_msg_val">Волнение</span></button>
+                        <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-balance-scale"></span><span class="hidden-md hidden-sm status_msg_val">Спокойный</span></button>
+                        <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-compass"></span><span class="hidden-md hidden-sm status_msg_val">Гуляю</span></button>
+                        <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-gamepad"></span><span class="hidden-md hidden-sm status_msg_val">Играю</span></button>
+                        <button class="btn btn-success btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-check-circle"></span><span class="hidden-md hidden-sm status_msg_val">В норме</span></button>
+                        <button class="btn btn-warning btn-block btn_status_submit" data-danger="false"><span class="fa fa-lg fa-fw fa-bug"></span><span class="hidden-md hidden-sm status_msg_val">Отладка</span></button>
+                        <button class="btn btn-danger btn-block btn_status_submit" data-danger="true"><span class="fa fa-lg fa-fw fa-fire"></span><span class="hidden-md hidden-sm status_msg_val">Пожар</span></button>
+
                     </div>
                 </div>
             </div>
