подготовка online движка. user_session

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                         <div class="glyphicon glyphicon-triangle-bottom"></div>
                     </div>
                 </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 code_msg"></div>
             </div>
         </div>
         <div id="widget_uc_msn" class="user_card_wrapper col-lg-3 col-md-3 col-sm-3 col-xs-6">
@@ -92,6 +93,7 @@
                         <div class="glyphicon glyphicon-triangle-bottom"></div>
                     </div>
                 </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 code_msg"></div>
             </div>
         </div>
 
@@ -200,8 +202,9 @@
                             <div class="form-group">
                                 <input type="text" class="uc_code_msg form-control" maxlength="20" placeholder="Сообщение всем">
                             </div>
-                            <button class="btn btn-danger btn-red-code" data-active="false">Красный код</button>
-                            <button class="btn btn-warning btn-orange-code" data-active="false">Оранжевый код</button>
+                            <button class="btn btn-danger btn-red-code col-lg-6 col-md-6 col-sm-12 col-xs-12" data-active="false">Красный код</button>
+                            <button class="btn btn-warning btn-orange-code col-lg-6 col-md-6 col-sm-12 col-xs-12" data-active="false">Оранжевый код</button>
+                            <button class="btn btn-success btn-green-code col-lg-12 col-md-12 col-sm-12 col-xs-12" data-active="false">Сказать</button>
                         </div>
                     </div>
                 </div>
