--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
     <script src="/js/global.js"></script>
     <script src="/js/jquery-1.11.3.js"></script>
     <script src="jquery-ui-1.11.4/jquery-ui.js"></script>
-
-    <script src="/js/start.js"></script>
     <script src="/js/auth.js"></script>
     <script src="/js/updater.js"></script>
     <script src="/js/refresher.js"></script>
-
+    <script src="/js/start.js"></script>
     <script src="/js/trends.js"></script>
     <script src="/js/lightbox.js"></script>
     <script src="/fancybox/jquery.fancybox.pack.js"></script>
@@ -96,8 +94,15 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 code_msg"></div>
             </div>
         </div>
+        <div id="widget_weather" class="user_card_wrapper col-lg-1 col-md-1 col-sm-1 col-xs-6 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-xs-offset-3">
+            <div class="weather_card user_card container-fluid">
+                <div class="weather_desc">
+                    тут будет погода
+                </div>
+            </div>
+        </div>
 
-        <div id="menu" class="col-lg-4 col-md-4 col-sm-6 text-right hidden-xs"></div>
+        <div id="menu" class="col-lg-3 col-md-3 col-sm-5 text-right hidden-xs"></div>
         <div id="menupda" class="col-xs-12 visible-xs text-center"></div>
 
         <div id="admintools" class="col-xs-12 text-center"></div>
@@ -131,6 +136,8 @@
                             <h3>
                                 <div class="label label-success label-online">online</div>
                             </h3>
+                            <span class="beenonline">Был в сети:</span>
+                            <p class="beenonline beenonline_val">00-00-0000 00:00:00</p>
                         </div>
                         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 text-center">
                             <h2 class="uc_login">{USER.Login}</h2>
